docs/book/samples/ch06/bare_check.out
error[unused]: unused expression: every non-final line binds a name (sequence effects with `>>`)
  --> bare_check.kso:2:5
   2 |   1 + 1
           ^
